--- a/computations.ipynb
+++ b/computations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,80 +18,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "⎡0.463842275389784⎤\n",
-      "⎢                 ⎥\n",
-      "⎢0.235784740278925⎥\n",
-      "⎢                 ⎥\n",
-      "⎢0.237971742976083⎥\n",
-      "⎢                 ⎥\n",
-      "⎢-2.85563659573048⎥\n",
-      "⎢                 ⎥\n",
-      "⎢0.816393249515643⎥\n",
-      "⎢                 ⎥\n",
-      "⎣2.66902072830996 ⎦\n",
-      "⎡2.02533494891272 ⎤\n",
-      "⎢                 ⎥\n",
-      "⎢0.943523143291935⎥\n",
-      "⎢                 ⎥\n",
-      "⎣1.32683447169753 ⎦\n",
-      "⎡0.463842275389784 ⎤\n",
-      "⎢                  ⎥\n",
-      "⎢0.235784740278925 ⎥\n",
-      "⎢                  ⎥\n",
-      "⎢0.237971742976083 ⎥\n",
-      "⎢                  ⎥\n",
-      "⎢ 0.28595605785931 ⎥\n",
-      "⎢                  ⎥\n",
-      "⎢-0.816393249515643⎥\n",
-      "⎢                  ⎥\n",
-      "⎣-0.472571925279829⎦\n",
-      "⎡2.02533494891272 ⎤\n",
-      "⎢                 ⎥\n",
-      "⎢0.943523143291935⎥\n",
-      "⎢                 ⎥\n",
-      "⎣1.32683447169753 ⎦\n",
-      "⎡ 0.463842275389784 ⎤\n",
-      "⎢                   ⎥\n",
-      "⎢ 2.32018732818821  ⎥\n",
-      "⎢                   ⎥\n",
-      "⎢ -3.45153331672998 ⎥\n",
-      "⎢                   ⎥\n",
-      "⎢ -0.28238492486145 ⎥\n",
-      "⎢                   ⎥\n",
-      "⎢ 0.829575310662926 ⎥\n",
-      "⎢                   ⎥\n",
-      "⎣-0.0804238636533884⎦\n",
-      "⎡2.02533494891273 ⎤\n",
-      "⎢                 ⎥\n",
-      "⎢0.943523143291935⎥\n",
-      "⎢                 ⎥\n",
-      "⎣1.32683447169753 ⎦\n",
-      "⎡0.463842275389784 ⎤\n",
-      "⎢                  ⎥\n",
-      "⎢ 2.32018732818821 ⎥\n",
-      "⎢                  ⎥\n",
-      "⎢-3.45153331672998 ⎥\n",
-      "⎢                  ⎥\n",
-      "⎢ 2.85920772872834 ⎥\n",
-      "⎢                  ⎥\n",
-      "⎢-0.829575310662926⎥\n",
-      "⎢                  ⎥\n",
-      "⎣ 3.0611687899364  ⎦\n",
-      "⎡2.02533494891273 ⎤\n",
-      "⎢                 ⎥\n",
-      "⎢0.943523143291935⎥\n",
-      "⎢                 ⎥\n",
-      "⎣1.32683447169753 ⎦\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import kuka_arm.scripts.inverse_kinematics as ik\n",
     "reload(ik)\n",
@@ -116,20 +45,19 @@
     "#   pprint(ik.SolveFK(thetas))\n",
     "\n",
     "for thetas in ik.SolveIK(*test_cases[4][0], debug = False):\n",
-    "  pprint(thetas)\n",
-    "  pprint(ik.SolveFK(thetas))\n"
+    "∏  pprint(ik.SolveFK(thetas))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "34.6 ms ± 2.55 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "58.5 ms ± 7.49 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -157,12 +85,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\left[\\begin{matrix}\\sin{\\left (r_{x} \\right )} \\sin{\\left (r_{z} \\right )} + \\sin{\\left (r_{y} \\right )} \\cos{\\left (r_{x} \\right )} \\cos{\\left (r_{z} \\right )} & - \\sin{\\left (r_{x} \\right )} \\sin{\\left (r_{y} \\right )} \\cos{\\left (r_{z} \\right )} + \\sin{\\left (r_{z} \\right )} \\cos{\\left (r_{x} \\right )} & \\cos{\\left (r_{y} \\right )} \\cos{\\left (r_{z} \\right )}\\\\- \\sin{\\left (r_{x} \\right )} \\cos{\\left (r_{z} \\right )} + \\sin{\\left (r_{y} \\right )} \\sin{\\left (r_{z} \\right )} \\cos{\\left (r_{x} \\right )} & - \\sin{\\left (r_{x} \\right )} \\sin{\\left (r_{y} \\right )} \\sin{\\left (r_{z} \\right )} - \\cos{\\left (r_{x} \\right )} \\cos{\\left (r_{z} \\right )} & \\sin{\\left (r_{z} \\right )} \\cos{\\left (r_{y} \\right )}\\\\\\cos{\\left (r_{x} \\right )} \\cos{\\left (r_{y} \\right )} & - \\sin{\\left (r_{x} \\right )} \\cos{\\left (r_{y} \\right )} & - \\sin{\\left (r_{y} \\right )}\\end{matrix}\\right]\n",
+      "\\left[\\begin{matrix}e_{x}\\\\e_{y}\\\\e_{z}\\end{matrix}\\right]\n"
+     ]
+    }
+   ],
    "source": [
-    "T = reduce(lambda acc, M: acc * M, ik.DHMatrices())\n",
-    "latex(simplify(T))"
+    "ee_pos = Matrix(symbols('e_x,e_y,e_z'))\n",
+    "r_z, r_y, r_x = symbols('r_z, r_y, r_x')\n",
+    "R = ik.rot_z(r_z) * ik.rot_y(r_y) * ik.rot_x(r_x) * ik.R_gripper\n",
+    "T = ee_pos\n",
+    "print(latex(simplify(R)))\n",
+    "print(latex(Matrix(T)))"
    ]
   },
   {
@@ -170,43 +111,6 @@
    "metadata": {},
    "source": [
     "## Forward Kinematics Playground"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "⎡-1.3993e-16  -4.5014e-17      1.0        2.153   ⎤\n",
-      "⎢                                                 ⎥\n",
-      "⎢  0.25708     -0.96639    -7.5285e-18  -1.114e-16⎥\n",
-      "⎢                                                 ⎥\n",
-      "⎢  0.96639      0.25708     1.468e-16     1.946   ⎥\n",
-      "⎢                                                 ⎥\n",
-      "⎣     0            0            0          1.0    ⎦\n"
-     ]
-    }
-   ],
-   "source": [
-    "T0_1,T1_2,T2_3,T3_4,T4_5,T5_6,T6_EE = ik.DHMatrices()\n",
-    "def e(q11, q22, q33, q44, q55, q66, joints):\n",
-    "  from kuka_arm.scripts.inverse_kinematics import q1,q2,q3,q4,q5,q6\n",
-    "  mat = reduce(lambda acc, M: acc * M, [T1_2,T2_3,T3_4,T4_5,T5_6,T6_EE][:(joints-1)], T0_1)\n",
-    "  return pprint(mat.evalf(subs={q1: q11, q2: q22, q3: q33, q4: q44, q5: q55, q6: q66}, prec = 5))\n",
-    "\n",
-    "spec = (-3.14,3.14,0.01)\n",
-    "widgets.interact(e, q11=spec, q22=spec, q33=spec, q44=spec, q55=spec, q66=spec, joints=(2,7))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### R3_EE Matrix (symbols)"
    ]
   },
   {
@@ -232,89 +136,43 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Symbolic computations (abandoned)"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def DHTransform(alpha, a, q, d):\n",
-    "  return Matrix([\n",
-    "    [cos(q),            -sin(q),           0,           a],\n",
-    "    [sin(q)*cos(alpha), cos(q)*cos(alpha), -sin(alpha), -sin(alpha)*d],\n",
-    "    [sin(q)*sin(alpha), cos(q)*sin(alpha), cos(alpha),  cos(alpha)*d ],\n",
-    "    [0,                 0,                 0,           1            ]])\n",
-    "\n",
-    "q1, q2, q3, q4, q5, q6 = symbols('q1:7')\n",
-    "alpha = [0, -pi/2, 0, -pi/2, pi/2, -pi/2, 0]\n",
-    "a = symbols('a0:7')\n",
-    "d1, d2, d3, d4, d5, d6, d_ee = symbols('d1:7,d_ee')\n",
-    "\n",
-    "constants = dict(\n",
-    "  list(zip(a, [0, 0.35, 1.25, -0.054, 0, 0, 0])) +\n",
-    "  list(zip([d1, d2, d3, d4, d5, d6, d_ee], [0.75, 0, 0, 1.5, 0, 0, 0.303])))\n",
-    "\n",
-    "T0_1 = DHTransform(alpha[0], a[0], q1, d1)\n",
-    "T1_2 = DHTransform(alpha[1], a[1], q2 - pi/2, d2)\n",
-    "T2_3 = DHTransform(alpha[2], a[2], q3, d3)\n",
-    "T3_4 = DHTransform(alpha[3], a[3], q4, d4)\n",
-    "T4_5 = DHTransform(alpha[4], a[4], q5, d5)\n",
-    "T5_6 = DHTransform(alpha[5], a[5], q6, d6)\n",
-    "T6_EE = DHTransform(alpha[6], a[6], 0, d_ee)\n",
-    "\n",
-    "# def e(q11, q22, q33, q44, q55, q66):\n",
-    "#   subs = {q1: q11, q2: q22, q3: q33, q4: q44, q5: q55, q6: q66}\n",
-    "#   subs.update(constants)\n",
-    "#   return pprint(mat.evalf(subs=subs, prec = 5))\n",
-    "\n",
-    "# spec = (-3.14,3.14,0.01)\n",
-    "# widgets.interact(e, q11=spec, q22=spec, q33=spec, q44=spec, q55=spec, q66=spec)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "mat = reduce(lambda acc, M: simplify(acc * M), [T0_1,T1_2,T2_3,T3_4,T4_5,T5_6,T6_EE])\n",
-    "subs = {q1: 2.86, q2: 0, q3: 0, q4:0 , q5: 0, q6: 0}\n",
-    "subs.update(constants)\n",
-    "mat.evalf(subs=subs, prec = 5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "⎡-1.1796e-16  -5.8981e-17      1.0         1.85    ⎤\n",
+      "⎢                                                  ⎥\n",
+      "⎢5.8981e-17      -1.0      -5.8981e-17  -1.0911e-16⎥\n",
+      "⎢                                                  ⎥\n",
+      "⎢    1.0      5.8981e-17   1.1796e-16      1.946   ⎥\n",
+      "⎢                                                  ⎥\n",
+      "⎣     0            0            0           1.0    ⎦\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "([0.3631, -0.012039, 3.4913], [-0.69656, -0.098579, -0.38459, 0.59765])"
+       "<function __main__.e>"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 184,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "s = '''\n",
-    "0.3631; -0.012039; 3.4913\n",
-    "-0.69656; -0.098579; -0.38459; 0.59765\n",
-    "'''.strip().split('\\n')\n",
-    "ee_pos_vals = list(map(float, s[0].split('; ')))\n",
-    "quaternion_vals = list(map(float, s[1].split('; ')))\n",
-    "ee_pos_vals, quaternion_vals"
+    "T0_1,T1_2,T2_3,T3_4,T4_5,T5_6,T6_EE = ik.DHMatrices()\n",
+    "def e(q11, q22, q33, q44, q55, q66, joints):\n",
+    "  from kuka_arm.scripts.inverse_kinematics import q1,q2,q3,q4,q5,q6\n",
+    "  mat = reduce(lambda acc, M: acc * M, [T1_2,T2_3,T3_4,T4_5,T5_6,T6_EE][:(joints-1)], T0_1)\n",
+    "  return pprint(mat.evalf(subs={q1: q11, q2: q22, q3: q33, q4: q44, q5: q55, q6: q66}, prec = 5))\n",
+    "\n",
+    "spec = (-3.14,3.14,0.01)\n",
+    "widgets.interact(e, q11=spec, q22=spec, q33=spec, q44=spec, q55=spec, q66=spec, joints=(2,7))"
    ]
   },
   {
@@ -326,22 +184,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = np.loadtxt('data/queries_2018_02_02_18_36_22_036.csv', delimiter=',')"
+    "data = np.loadtxt('data/queries_2018_02_06_12_48_09_439.csv', delimiter=',')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[5.69311939016356e-7 0.00331166651808493 4.49653055659255e-5]\n",
+      "[0.00734727528747969 0.0681212544755690 0.0111652637167001]\n",
+      "[0.00771062169755599 0.0681330282123308 0.0115230669871469]\n",
+      "[0.00771348313849485 0.0681495959650390 0.0115165480744319]\n",
+      "[0.00771457325986047 0.0681712102712771 0.0115043437540971]\n",
+      "[0.00872386445852591 0.0820324814837724 0.0129653940115335]\n",
+      "[0.00872512804032910 0.0820697529859466 0.0129381296301561]\n",
+      "[0.0106276007993227 0.102752450436032 0.0156962779623542]\n",
+      "[0.0106451297696570 0.102801834428822 0.0156488740009273]\n",
+      "[0.0144840784213738 0.144114972595036 0.0211274132976342]\n",
+      "[0.0145632073671003 0.144089238607604 0.0210238443404736]\n",
+      "[0.0125476215790470 0.125583878543757 0.0178983901784449]\n",
+      "[0.0126568825983950 0.125200403997570 0.0178371746650212]\n",
+      "[0.00452965073108613 0.0471569963061460 0.00635879773049242]\n",
+      "[0.00455040022770925 0.0467870969551323 0.00639398457902329]\n",
+      "[0.000334914281948429 0.0214398736229178 0.000887575557461329]\n",
+      "[0.000373330504439995 0.0190616843674587 0.00120561304662337]\n",
+      "[0.000521408224078979 0.0254424581774721 0.00436818738425737]\n",
+      "[0.00106486316927867 0.00883773741918992 0.00900113802275149]\n",
+      "[0.00502976737870453 0.0956693556264863 0.00449938673505290]\n",
+      "[0.00370092700231384 0.108137966664586 0.00441143797525712]\n",
+      "[0.0152066224398384 0.198519917471946 0.0255138485547923]\n",
+      "[0.0152301083612758 0.196652509659250 0.0317571213577281]\n",
+      "[0.0299551245265994 0.236820297326370 0.0605378196201238]\n",
+      "[0.0688111816438344 0.232783517365469 0.104041830366810]\n",
       "0.00000\n"
      ]
     }
@@ -353,7 +236,10 @@
     "  ee_pos = np.array(row[0:3])\n",
     "  quaternion = row[3:7]\n",
     "  prev_thetas = row[7:13]\n",
-    "  computed_pos = np.array(ik.SolveFK(ik.SolveIKCheapest(prev_thetas, ee_pos, quaternion)))\n",
+    "  thetas = ik.SolveIKCheapest(prev_thetas, ee_pos, quaternion)\n",
+    "  print(np.abs(prev_thetas - np.array(thetas).reshape((1, -1)))[0, 3:])\n",
+    "#   print(np.abs(prev_thetas - np.array(thetas).reshape(1, -1)))\n",
+    "  computed_pos = np.array(ik.SolveFK(thetas))\n",
     "  computed_pos = computed_pos.reshape((1,-1))\n",
     "  error = np.sqrt(np.double(np.sum(np.power(ee_pos - computed_pos, 2))))\n",
     "  errors.append(error)\n",
@@ -366,14 +252,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "reload(ik)\n",
+    "row = data[0]\n",
+    "ee_pos = np.array(row[0:3])\n",
+    "quaternion = row[3:7]\n",
+    "prev_thetas = row[7:13]\n",
+    "for thetas in ik.SolveIKLimits(ee_pos, quaternion):\n",
+    "  print(np.abs(prev_thetas - np.array(thetas).reshape((1, -1)))[0, 3:])"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:urobo]",
+   "display_name": "Python [conda env:RoboND]",
    "language": "python",
-   "name": "conda-env-urobo-py"
+   "name": "conda-env-RoboND-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -389,56 +283,56 @@
   },
   "widgets": {
    "state": {
-    "3d107de8c04a4c04b69ad64cf8a3c3c0": {
+    "004ca8c75083439da75dc6ede7366bb3": {
      "views": []
     },
-    "3e2e8c2f53984cd097f748ccc30fe8e0": {
+    "01de566dccdb4b2faf965b2fb2918ebc": {
      "views": []
     },
-    "426e22fad80344ba9e55b075109ff6d1": {
+    "074e3f8ce3494994a584e5d831940665": {
      "views": []
     },
-    "4ed3e8830b83471aae034a79e36b137f": {
+    "116fd2533708453694496b0add33f80c": {
      "views": []
     },
-    "6d157d9262ec41dcbbd50cf7e9461d71": {
+    "13c80394ee1f48c6a50bc2e5f6ae7430": {
      "views": []
     },
-    "77e70a9772064b87b3c1fa073fe63299": {
+    "1471b896ca5b4fb6906f451d26cb1981": {
      "views": []
     },
-    "8ec742b7ed504b569201c05b743fcd9b": {
+    "2c44381850d94d3e83940f4257b4c23a": {
      "views": []
     },
-    "8f6ea76f8671479a8d1dc6ef2de81306": {
+    "2d8604126e0b42ff9b50f01b7e3942df": {
      "views": []
     },
-    "91b16894c6084fe3ac7306bf93f296d9": {
+    "343154601596453eba9427b13c73c877": {
      "views": []
     },
-    "b327fd4d203348d3aaacb45ce90af5e7": {
+    "3a19de8cc08949e6b7b754cafbb4af9e": {
      "views": []
     },
-    "b4e57e2ce73a4e93879a343d886110ff": {
+    "46ea908db0684b619fe1a191ccae86e9": {
      "views": []
     },
-    "b8b9cac1492249d4a8802d2b024432aa": {
+    "59b45f8e513e493ab78f84e2ec08c1f4": {
      "views": []
     },
-    "c9782ae4db9f453dbd6d2a2bf0fd969a": {
+    "67e4b56c113d403c9bbd276652586288": {
      "views": [
       {
-       "cell_index": 4
+       "cell_index": 8
       }
      ]
     },
-    "e0a71a8c17254f14951bb63581bb6c3b": {
+    "861770c9897146d5922b2c1dc7bb153d": {
      "views": []
     },
-    "e96f149b879a472e96a7e3db4b85c423": {
+    "bac6aa48e40746579ec797e9e1618ade": {
      "views": []
     },
-    "fafd07365a444bbc9f3f27d885b0fe8f": {
+    "fc5196bf295e4399b82f5932537d7cf3": {
      "views": []
     }
    },
